--- a/src/components/class/board-nav.css
+++ b/src/components/class/board-nav.css
@@ -1,44 +1,45 @@
-.board-nav-container{    
-    float: left;		
+.board-nav-container {
+  float: left;
 }
 
-.board-nav-body{
-		width: 350px;
-    height: 500px;
-		
-		background-color: rgba(0, 0, 0, 0.548);
-		user-select: none;
+.board-nav-body {
+  width: 350px;
+  height: fit-content;
+
+  background-color: rgba(0, 0, 0, 0.548);
+  user-select: none;
 }
 
 .board-nav-body div {
-    position: relative;
-    width: inherit;
-    height: 25%;
-    
-    display: block; /* Make the links appear below each other */
-    text-decoration: none; /* Remove underline from links */
-    font-family: 'Nanum Gothic';
-    font-size: 24px;
-    font-weight: 700;
-    text-align: center;
-    color: #fff;
+  position: relative;
+  width: inherit;
+  height: 100px;
 
-    transition: 0.4s;
-    cursor: pointer;
-  }
+  display: block; /* Make the links appear below each other */
+  text-decoration: none; /* Remove underline from links */
+  font-family: "Nanum Gothic";
+  font-size: 24px;
+  font-weight: 700;
+  text-align: center;
+  color: #fff;
 
-  .board-nav-body-included-teacherMenu div {
-    height: 20%;
-  }
-  
-  .board-nav-body div:hover{
-    background-color: rgba(204, 204, 204, 0.699); /* Dark grey background on mouse-over */
-    color: #000;
-  }
+  transition: 0.4s;
+  cursor: pointer;
+}
 
-  .board-nav-body div p {
-    position: absolute;
-    top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-  }
+.board-nav-body div:hover {
+  background-color: rgba(
+    204,
+    204,
+    204,
+    0.699
+  ); /* Dark grey background on mouse-over */
+  color: #000;
+}
+
+.board-nav-body div p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
