--- a/src/containers/class.css
+++ b/src/containers/class.css
@@ -7,6 +7,18 @@ body {
     background-size: 20px 20px;
 }
 
+.class-container{
+    height: fit-content;
+}
 .main-body{
     margin: 20px 200px;
 }
+
+.board-menu{
+    float: left;
+}
+
+.board{
+    margin-left: 370px;
+}
+
