--- a/src/components/loginPanel.module.css
+++ b/src/components/loginPanel.module.css
@@ -49,7 +49,7 @@ input{
     text-align: center;
 }
 
-button{
+.login-btns{
     display: block;
     width: 332px;
     height: 40px;
@@ -59,7 +59,7 @@ button{
     margin-bottom: 8px;
 }
 
-button:hover{
+.login-btns:hover{
     cursor: pointer;
 }
 
@@ -79,6 +79,10 @@ button:hover{
     border-radius: 5px;
     outline: none;
     color: #000;
+}
+
+a{    
+    text-decoration: none;
 }
 
 .divider{    
@@ -116,33 +120,4 @@ button:hover{
     top: 13px;
     left: 201px;
     border-top: 3px solid #FFF;
-}
-
-a{
-    font-family: 'Staatliches';
-    font-weight: lighter;
-    font-size: 17px;
-    color: #FFF;
-    text-decoration: none;
-}
-
-form a:first-child{
-    float: left;
-}
-
-form a:last-child{
-    float: right;
-}
-
-.a-signup::before{
-    content: "Sign Up";
-    color: #000;
-    position: absolute;
-    width: 0;
-    overflow: hidden;
-    transition: 0.6s;
-}
-
-a .a-signup:hover::before{
-    width: 100%;
 }
