--- a/src/components/class/board-nav.module.css
+++ b/src/components/class/board-nav.module.css
@@ -1,9 +1,10 @@
-.board-nav-container {
-  margin-right: 20px;
+.board-nav-container {  
+  max-width: 350px;
+  width: 350px;
 }
 
 .board-nav-body {
-  width: 350px;
+  width: 100%;
   height: fit-content;
 
   background-color: rgba(0, 0, 0, 0.548);
@@ -42,4 +43,15 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+@media screen and (max-width: 1024px){
+  .board-nav-container{
+    max-width: 625px;
+    width: inherit;
+  }
+  .board-nav-body{
+    width: inherit;
+    display: block;
+  }
 }
