--- a/src/components/class/navigator.module.css
+++ b/src/components/class/navigator.module.css
@@ -1,7 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
 .nav-header {
     height: 73px;
     background: #000000d0;
@@ -27,7 +23,7 @@
     line-height: 80px;
 }
 
-.menu a{
+.menu .menu-a-tag{
     color: #fff;
     font-family: 'Staatliches';
     font-size: 20px;
@@ -54,7 +50,7 @@
     line-height: 76px;
 }
 
-.menu a:hover,
+.menu .menu-a-tag:hover,
 .show-menu-btn:hover,
 .hide-menu-btn:hover{
     color: rgba(204, 204, 204, 0.699);
