--- a/src/components/loginPanel.module.css
+++ b/src/components/loginPanel.module.css
@@ -43,8 +43,8 @@ input{
     border-radius: 5px;
     outline: none;
     color: #FFF;
-    font-family: 'Staatliches';
-    font-weight: 100;
+    font-family: 'Nanum Gothic','Nanum Myeongjo';
+    font-weight: bold;
     font-size: 25px;
     text-align: center;
 }
