--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,29 @@
-body {
+@import url(http://fonts.googleapis.com/earlyaccess/nanummyeongjo.css);
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic');
+@import url(//fonts.googleapis.com/earlyaccess/kopubbatang.css);
+@import url('https://fonts.googleapis.com/css?family=Staatliches');
+
+* {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+}
+
+body {
+  font-family: 
+  -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;  
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(45deg,
+    #EEEEEE 46%, #BEBEBE 0,#BEBEBE 50%, 
+    #EEEEEE 0, #EEEEEE 96%,#BEBEBE 0);
+  background-size: 20px 20px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  monospace;
 }
