--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic');
+@import url("https://fonts.googleapis.com/css?family=Nanum+Gothic");
+@import url(//cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css);
+@import url(//cdn.rawgit.com/hiun/NanumSquare/master/nanumsquare.css);
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500");
 @import url(//fonts.googleapis.com/earlyaccess/kopubbatang.css);
-@import url('https://fonts.googleapis.com/css?family=Staatliches');
+@import url("https://fonts.googleapis.com/css?family=Staatliches");
 
-body{
+body {
   margin: 0;
   padding: 0;
   width: 100%;
