--- a/src/components/loginPanel.module.css
+++ b/src/components/loginPanel.module.css
@@ -43,8 +43,8 @@
   border-radius: 5px;
   outline: none;
   color: #fff;
-  font-family: "Staatliches";
-  font-weight: 100;
+  font-family: "NanumSquare";
+  font-weight: bold;
   font-size: 25px;
   text-align: center;
 }
