--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/earlyaccess/nanummyeongjo.css);
+@import url(https://fonts.googleapis.com/earlyaccess/nanummyeongjo.css);
 @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic');
 @import url(//fonts.googleapis.com/earlyaccess/kopubbatang.css);
 @import url('https://fonts.googleapis.com/css?family=Staatliches');
