--- a/src/components/loginPanel.module.css
+++ b/src/components/loginPanel.module.css
@@ -4,9 +4,6 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  background: url("../images/login_back1.jpg") no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
 }
 
 .login-container {
@@ -15,8 +12,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: rgba(0, 0, 0, 0.7);
-  border: 2px solid #fff;
+  background: rgba(255, 255, 255, 1);
+  border: 2px solid #000;
   border-radius: 5px;
   user-select: none;
 }
@@ -24,9 +21,9 @@
 .login-header {
   padding-top: 5px;
   padding-bottom: 20px;
-  font-family: "KoPub Batang";
-  font-weight: lighter;
-  color: #fff;
+  font-family: "NanumSquare";
+  font-weight: bold;
+  color: #3f688c;
   text-transform: uppercase;
   text-align: center;
   font-size: 48px;
@@ -43,7 +40,7 @@
   border-radius: 5px;
   outline: none;
   color: #fff;
-  font-family: "NanumSquare","Nanum Gothic","Nanum Myeongjo";
+  font-family: "NanumSquare", "Nanum Gothic", "Nanum Myeongjo";
   font-weight: bold;
   font-size: 25px;
   text-align: center;
