--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,6 @@
-@import url(https://fonts.googleapis.com/earlyaccess/nanummyeongjo.css);
-@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic');
+@import url("https://fonts.googleapis.com/css?family=Nanum+Gothic");
 @import url(//cdn.rawgit.com/hiun/NanumSquare/master/nanumsquare.css);
-@import url("https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css");
-@import url(//fonts.googleapis.com/earlyaccess/kopubbatang.css);
-@import url("https://fonts.googleapis.com/css?family=Staatliches");
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500");
-
 
 * {
   margin: 0;
